Fix absolute link to images on tuna page.

--- a/recipes/tuna-casserole.html
+++ b/recipes/tuna-casserole.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tuna Casserole</h1>
-    <img src="images/propane-casserole-med.jpg" alt="A grey day next to a gas station marquette that says 'Propane Monday Noodles and Tuna'.">
+    <img src="../images/propane-casserole-med.jpg" alt="A grey day next to a gas station marquette that says 'Propane Monday Noodles and Tuna'.">
 </body>
 </html>
 /*Image source: "Beautiful Granite Falls, Washington of the 'Propane Monday' tuna noodle casserole" by Jackson West is licensed under CC BY 2.0.*/
