Add ingredients to Tuna recipe.

--- a/recipes/tuna-casserole.html
+++ b/recipes/tuna-casserole.html
@@ -8,6 +8,25 @@
 <body>
     <h1>Tuna Casserole</h1>
     <img src="../images/propane-casserole-med.jpg" alt="A grey day next to a gas station marquette that says 'Propane Monday Noodles and Tuna'.">
+    <h2>Description</h2>
+    <p>Oh man, rainy day comfort food in a 13x9 dish. "Cheese and fish?", you might exclaim, "well that sounds awful!" But it is not!</p>
+    <p>Noodles, vegetables, and canned tuna fish are baked together in a creamy sauce and topped with crispy potato chips.</p>
+    
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 cups cooked noodles (wide egg noodles are fine, or macaroni)</li>
+        <li>1 TB butter</li>
+        <li>1 small onion, diced</li>
+        <li>2 stalks celery, diced</li>
+        <li>1 cup frozen peas, defrosted</li>
+        <li>1 can tuna (5-6 oz, drained)</li>
+        <li>10.5 oz can of cream of mushroom soup</li>
+        <li>1/3 cup milk</li>
+        <li>1 cup shredded cheddar cheese</li>
+        <li>2 or 3 cups of potato chips, crushed</li>
+        <li>1 TB butter, melted</li>
+        <li>1/4 cup grated parmesan cheese</li>
+    </ul>
 </body>
 </html>
 /*Image source: "Beautiful Granite Falls, Washington of the 'Propane Monday' tuna noodle casserole" by Jackson West is licensed under CC BY 2.0.*/
