Add ingredients list and steps to tuna recipe page.

--- a/recipes/tuna-casserole.html
+++ b/recipes/tuna-casserole.html
@@ -27,6 +27,15 @@
         <li>1 TB butter, melted</li>
         <li>1/4 cup grated parmesan cheese</li>
     </ul>
+    <ol>
+        <li>Preheat oven to 450&deg;F</li>
+        <li>Cook noodles al dente according to package directions. Drain & rinse.</li>
+        <li>In empty noodle pot, cook onion and celery in butter until tender, about 5 mins.</li>
+        <li>Once tender, turn off heat and add the drained noodles, peas, soup, milk, cheese, and tuna to pot. Mix well.</li>
+        <li>Dump everything into a 9 x 13" baking dish (2qts) and top with crumbled potato chips, parm, and melted butter.</li>
+        <li>Bake 18-20 minutes until bubbly and the potato chips are starting to brown.</li>
+        <li>Let cool 10 minutes before serving.</li>
+    </ol>
 </body>
 </html>
 /*Image source: "Beautiful Granite Falls, Washington of the 'Propane Monday' tuna noodle casserole" by Jackson West is licensed under CC BY 2.0.*/
