Add link to chicken croquette recipe.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/tuna-casserole.html">Tuna Casserole</a>
+    <a href="recipes/chicken-croquettes.html">Chicken Croquettes</a>
 </body>
 </html>
