Add link to banana bread recipe page on index.html.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    
     <a href="recipes/tuna-casserole.html">Tuna Casserole</a>
     <a href="recipes/chicken-croquettes.html">Chicken Croquettes</a>
+    <a href="recipes/banana-bread.html">Banana Bread</a>
+
 </body>
 </html>
