Fixed comments on two recipe pages and added ul to index.html.

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -35,6 +35,6 @@
         <li>Bake 50 minutes to 1 hour, or until a tester inserted in the middle of the cake comes out clean.</li>
     </ol>
 </body>
-/* "banana bread!" by smalljude is licensed under CC BY 2.0. To view a copy of this license, visit https://creativecommons.org/licenses/by/2.0/?ref=openverse */
+<!-- "banana bread!" by smalljude is licensed under CC BY 2.0. To view a copy of this license, visit https://creativecommons.org/licenses/by/2.0/?ref=openverse -->
 
 </html>
