--- a/recipes/tuna-casserole.html
+++ b/recipes/tuna-casserole.html
@@ -39,5 +39,5 @@
         <li>Let cool 10 minutes before serving.</li>
     </ol>
 </body>
+<!--Image source: "Beautiful Granite Falls, Washington of the 'Propane Monday' tuna noodle casserole" by Jackson West is licensed under CC BY 2.0.-->
 </html>
-/*Image source: "Beautiful Granite Falls, Washington of the 'Propane Monday' tuna noodle casserole" by Jackson West is licensed under CC BY 2.0.*/
