--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
-    <a href="recipes/tuna-casserole.html">Tuna Casserole</a>
-    <a href="recipes/chicken-croquettes.html">Chicken Croquettes</a>
-    <a href="recipes/banana-bread.html">Banana Bread</a>
-
+    <ul>
+        <li><a href="recipes/tuna-casserole.html">Tuna Casserole</a></li>
+        <li><a href="recipes/chicken-croquettes.html">Chicken Croquettes</a></li>
+        <li><a href="recipes/banana-bread.html">Banana Bread</a></li>
+    </ul>
 </body>
 </html>
