--- a/recipes/chicken-croquettes.html
+++ b/recipes/chicken-croquettes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" style="height: 400px; width:auto;">
     <title>Chicken Croquette Recipe</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
     <h3>Ingredients</h3>
         <h4>Main recipe</h4>
         <ul>
-            <li>1 lb boneless skinless chicken breast<li>
+            <li>1 lb boneless skinless chicken breast</li>
             <li>1/4 tsp salt</li>
             <li>1/8 tsp each black pepper and thyme</li>
             <li>1/4 c butter (1/2 stick)</li>
